RESOLVED FIXED244721
Debug assertion under `ImageOverlay::updateWithTextRecognitionResult` when hovering over certain images
https://bugs.webkit.org/show_bug.cgi?id=244721
Summary Debug assertion under `ImageOverlay::updateWithTextRecognitionResult` when ho...
Wenson Hsieh
Reported 2022-09-02 11:16:14 PDT
.
Attachments
Wenson Hsieh
Comment 1 2022-09-02 11:18:00 PDT
We currently hit an assertion when hovering over some of the images on https://developer.mozilla.org/en-US/docs/Web/CSS/writing-mode: ``` ASSERTION FAILED: m_end >= m_begin /Users/ntim/Build/Debug/usr/local/include/wtf/Range.h(63) : WTF::Range<float>::Range(WTF::Range::Type, WTF::Range::Type) [PassedType = float] 1 0x12c94a708 WTFCrash 2 0x14ae75614 WTFCrashWithInfo(int, char const*, char const*, int) 3 0x14deb2b94 WTF::Range<float>::Range(float, float) 4 0x14deb29a4 WTF::Range<float>::Range(float, float) 5 0x14deb22f4 WTF::Range<float> WebCore::ImageOverlay::updateWithTextRecognitionResult(WebCore::HTMLElement&, WebCore::TextRecognitionResult const&, WebCore::ImageOverlay::CacheTextRecognitionResults)::$_4::operator()<WebCore::TextRecognitionWordData const>(WebCore::TextRecognitionWordData const&) const ```
Wenson Hsieh
Comment 2 2022-09-02 11:28:12 PDT
EWS
Comment 3 2022-09-02 15:45:19 PDT
Committed 254115@main (e9e6c7937d2c): <https://commits.webkit.org/254115@main> Reviewed commits have been landed. Closing PR #3962 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2022-09-02 15:46:19 PDT
Note You need to log in before you can comment on or make changes to this bug.