Debug assertion under `ImageOverlay::updateWithTextRecognitionResult` when hovering over certain images https://bugs.webkit.org/show_bug.cgi?id=244721

Reviewed by Ryosuke Niwa.

It's possible for VisionKit to return word quads that are flipped about the y-axis in some
scenarios when analyzing images for Live Text. In this case, we end up asserting due to the fact
that we attempt to create `WTF::Range`s corresponding to these flipped word ranges, for which the
starting offset is after the end.

Fix this by making `updateWithTextRecognitionResult` robust against this possibility, by ensuring
that the start offset is always before or equal to the end offset.

Test: fast/images/text-recognition/image-overlay-reversed-range.html

* LayoutTests/fast/images/text-recognition/image-overlay-reversed-range-expected.txt: Added.
* LayoutTests/fast/images/text-recognition/image-overlay-reversed-range.html: Added.
* Source/WebCore/dom/ImageOverlay.cpp:
(WebCore::ImageOverlay::updateWithTextRecognitionResult):

Canonical link: https://commits.webkit.org/254115@main